...
                android:layout_row="0"
                android:layout_column="0"
                android:layout_marginTop="@dimen/dialog_edit_network_task_access_type_margin_top"
                android:text="@string/label_dialog_edit_network_task_access_type" />

            <RadioGroup
                android:id="@+id/radiogroup_dialog_edit_network_task_accesstype"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="1" />

            <TextView
                android:id="@+id/textview_dialog_edit_network_task_address_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_row="1"
                android:layout_column="0"
                android:labelFor="@id/edittext_dialog_edit_network_task_address"
                android:text="" />

            <LinearLayout
                android:id="@+id/linearlayout_dialog_edit_network_task_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...
                android:id="@+id/textview_dialog_edit_network_task_port_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_row="2"
                android:layout_column="0"
                android:labelFor="@id/edittext_dialog_edit_network_task_port"
                android:text="" />

            <LinearLayout
                android:id="@+id/linearlayout_dialog_edit_network_task_port"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...
                android:id="@+id/textview_dialog_edit_network_task_interval_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_row="3"
                android:layout_column="0"
                android:labelFor="@id/edittext_dialog_edit_network_task_interval"
                android:text="@string/label_dialog_edit_network_task_interval" />

            <LinearLayout
                android:id="@+id/linearlayout_dialog_edit_network_task_interval"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...
                android:layout_marginLeft="@dimen/linearlayout_dialog_edit_network_task_notification_margin_left"
                android:layout_marginTop="@dimen/linearlayout_dialog_edit_network_task_notification_margin_top"
                android:layout_row="5"
                android:layout_column="1">

                <Switch
                    android:id="@+id/switch_dialog_edit_network_task_notification"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:showText="false" />

                <TextView
                    android:id="@+id/textview_dialog_edit_network_task_notification_label_on_off"
...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/linearlayout_dialog_edit_network_task_ok_cancel_padding_top"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageview_dialog_edit_network_task_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:contentDescription="@string/label_dialog_edit_network_task_ok"
                app:srcCompat="@drawable/icon_ok_selector" />

            <ImageView
                android:id="@+id/imageview_dialog_edit_network_task_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:contentDescription="@string/label_dialog_edit_network_task_cancel"
...
