<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2026 Alwin Ibba
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="AccessType_NULL" tools:ignore="ExtraTranslation">No type</string>
    <string name="AccessType_NULL_address" tools:ignore="ExtraTranslation">Host: not applicable</string>
    <string name="AccessType_PING" tools:ignore="ExtraTranslation" tools:keep="@string/AccessType_PING">Ping</string>
    <string name="AccessType_PING_address" tools:ignore="ExtraTranslation" tools:keep="@string/AccessType_PING_address">Host:</string>
    <string name="AccessType_PING_port" tools:ignore="ExtraTranslation" tools:keep="@string/AccessType_PING_port">Port:</string>
    <string name="AccessType_PING_task_validator" tools:ignore="ExtraTranslation" tools:keep="@string/AccessType_PING_task_validator">net.ibbaa.keepitup.ui.validation.StandardHostPortValidator</string>
    <string name="AccessType_PING_data_validator" tools:ignore="ExtraTranslation" tools:keep="@string/AccessType_PING_data_validator">net.ibbaa.keepitup.ui.validation.StandardAccessTypeDataValidator</string>
    <string name="AccessType_CONNECT" tools:ignore="ExtraTranslation" tools:keep="@string/AccessType_CONNECT">Connect</string>
    <string name="AccessType_CONNECT_address" tools:ignore="ExtraTranslation" tools:keep="@string/AccessType_CONNECT_address">Host:</string>
    <string name="AccessType_CONNECT_port" tools:ignore="ExtraTranslation" tools:keep="@string/AccessType_CONNECT_port">Port:</string>
    <string name="AccessType_CONNECT_task_validator" tools:ignore="ExtraTranslation" tools:keep="@string/AccessType_CONNECT_task_validator">net.ibbaa.keepitup.ui.validation.StandardHostPortValidator</string>
    <string name="AccessType_CONNECT_data_validator" tools:ignore="ExtraTranslation" tools:keep="@string/AccessType_CONNECT_data_validator">net.ibbaa.keepitup.ui.validation.StandardAccessTypeDataValidator</string>
    <string name="AccessType_DOWNLOAD" tools:ignore="ExtraTranslation" tools:keep="@string/AccessType_DOWNLOAD">Download</string>
    <string name="AccessType_DOWNLOAD_address" tools:ignore="ExtraTranslation" tools:keep="@string/AccessType_DOWNLOAD_address">URL:</string>
    <string name="AccessType_DOWNLOAD_port" tools:ignore="ExtraTranslation" tools:keep="@string/AccessType_DOWNLOAD_port">Port:</string>
    <string name="AccessType_DOWNLOAD_task_validator" tools:ignore="ExtraTranslation" tools:keep="@string/AccessType_DOWNLOAD_task_validator">net.ibbaa.keepitup.ui.validation.URLValidator</string>
    <string name="AccessType_DOWNLOAD_data_validator" tools:ignore="ExtraTranslation" tools:keep="@string/AccessType_DOWNLOAD_data_validator">net.ibbaa.keepitup.ui.validation.StandardAccessTypeDataValidator</string>
    <string name="AccessType_SNMP" tools:ignore="ExtraTranslation" tools:keep="@string/AccessType_SNMP">SNMP</string>
    <string name="AccessType_SNMP_address" tools:ignore="ExtraTranslation" tools:keep="@string/AccessType_SNMP_address">Host:</string>
    <string name="AccessType_SNMP_port" tools:ignore="ExtraTranslation" tools:keep="@string/AccessType_SNMP_port">Port:</string>
    <string name="AccessType_SNMP_task_validator" tools:ignore="ExtraTranslation" tools:keep="@string/AccessType_SNMP_task_validator">net.ibbaa.keepitup.ui.validation.StandardHostPortValidator</string>
    <string name="AccessType_SNMP_data_validator" tools:ignore="ExtraTranslation" tools:keep="@string/AccessType_SNMP_data_validator">net.ibbaa.keepitup.ui.validation.StandardAccessTypeDataValidator</string>
    <string name="ContextOption_COPY_name" tools:ignore="ExtraTranslation" tools:keep="@string/ContextOption_COPY_name">Copy</string>
    <string name="ContextOption_PASTE_name" tools:ignore="ExtraTranslation" tools:keep="@string/ContextOption_PASTE_name">Paste</string>
    <string name="SNMPVersion_V1_name" tools:ignore="ExtraTranslation" tools:keep="@string/SNMPVersion_V1_name">v1</string>
    <string name="SNMPVersion_V2C_name" tools:ignore="ExtraTranslation" tools:keep="@string/SNMPVersion_V2C_name">v2c</string>
    <string name="SNMPVersion_V3_name" tools:ignore="ExtraTranslation" tools:keep="@string/SNMPVersion_V3_name">v3</string>
    <string name="SNMPTransport_UDP_name" tools:ignore="ExtraTranslation" tools:keep="@string/SNMPTransport_UDP_name">UDP</string>
    <string name="SNMPTransport_TCP_name" tools:ignore="ExtraTranslation" tools:keep="@string/SNMPTransport_TCP_name">TCP</string>
    <string name="SNMPAuthAlgorithm_NONE_name" tools:ignore="ExtraTranslation" tools:keep="@string/SNMPAuthAlgorithm_NONE_name">None</string>
    <string name="SNMPAuthAlgorithm_MD5_name" tools:ignore="ExtraTranslation" tools:keep="@string/SNMPAuthAlgorithm_MD5_name">MD5</string>
    <string name="SNMPAuthAlgorithm_SHA1_name" tools:ignore="ExtraTranslation" tools:keep="@string/SNMPAuthAlgorithm_SHA1_name">SHA-1</string>
    <string name="SNMPAuthAlgorithm_SHA224_name" tools:ignore="ExtraTranslation" tools:keep="@string/SNMPAuthAlgorithm_SHA224_name">SHA-224</string>
    <string name="SNMPAuthAlgorithm_SHA256_name" tools:ignore="ExtraTranslation" tools:keep="@string/SNMPAuthAlgorithm_SHA256_name">SHA-256</string>
    <string name="SNMPAuthAlgorithm_SHA384_name" tools:ignore="ExtraTranslation" tools:keep="@string/SNMPAuthAlgorithm_SHA384_name">SHA-384</string>
    <string name="SNMPAuthAlgorithm_SHA512_name" tools:ignore="ExtraTranslation" tools:keep="@string/SNMPAuthAlgorithm_SHA512_name">SHA-512</string>
    <string name="SNMPPrivAlgorithm_NONE_name" tools:ignore="ExtraTranslation" tools:keep="@string/SNMPPrivAlgorithm_NONE_name">None</string>
    <string name="SNMPPrivAlgorithm_DES_name" tools:ignore="ExtraTranslation" tools:keep="@string/SNMPPrivAlgorithm_DES_name">DES</string>
    <string name="SNMPPrivAlgorithm_AES128_name" tools:ignore="ExtraTranslation" tools:keep="@string/SNMPPrivAlgorithm_AES128_name">AES-128</string>
    <string name="SNMPPrivAlgorithm_AES192_name" tools:ignore="ExtraTranslation" tools:keep="@string/SNMPPrivAlgorithm_AES192_name">AES-192</string>
    <string name="SNMPPrivAlgorithm_AES256_name" tools:ignore="ExtraTranslation" tools:keep="@string/SNMPPrivAlgorithm_AES256_name">AES-256</string>
    <string name="SNMPPrivAlgorithm_AES256C_name" tools:ignore="ExtraTranslation" tools:keep="@string/SNMPPrivAlgorithm_AES256C_name">AES-256C</string>
</resources>