<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="task_accesstype_default">PING</string>
    <string name="task_address_default">192.168.178.1</string>
    <integer name="task_port_default">22</integer>
    <integer name="task_interval_default">15</integer>
    <bool name="task_notification_default">false</bool>
</resources>
